--- a/src/styles/components/UI/Navbar.scss
+++ b/src/styles/components/UI/Navbar.scss
@@ -18,7 +18,7 @@
 
 .navbar__links__link {
     margin-right: 20px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     padding-bottom: 5px;
     // font-weight: 600;
     &:hover {
