--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import "./components/Home/HomeServices.scss";
 @import "./components/Home/HomeAbout.scss";
 @import "./components/Home/HomeProjects.scss";
+@import "./components/Home/HomeClients.scss";
