--- a/src/styles/components/Home/HomeClients.scss
+++ b/src/styles/components/Home/HomeClients.scss
@@ -15,6 +15,7 @@
 
 .homeClients__grid__client {
     @include boxshadow;
+    @include curvedborder;
     padding: 40px 20px;
     img {
         width: 100%;
