--- a/src/styles/components/Home/HomeProjects.scss
+++ b/src/styles/components/Home/HomeProjects.scss
@@ -25,6 +25,7 @@
 }
 
 .homeProjects__grid__project {
+    
     h1 {
         margin-top: 20px;
     }
@@ -32,6 +33,7 @@
         @include boxshadow;
         object-fit: cover;
         height: 337px;
+        @include curvedborder;
     }
     
 }
