--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -48,6 +48,7 @@ h1, h2, h3, h4, h5, p {
 }
 
 .btn {
+    border-radius: 20px;
     padding: 10px 20px;
     text-transform: uppercase;
     font-size: 1em;
