--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,8 @@
 @import "./base/index.scss";
 
 @import "./components/UI/Navbar.scss";
+@import "./components/UI/ContactBox.scss";
+@import "./components/UI/Footer.scss";
 
 @import "./components/Home/HomeHero.scss";
 @import "./components/Home/HomeServices.scss";
