--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -24,6 +24,14 @@ h1, h2, h3, h4, h5, p {
     line-height: 30px;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
+}
+
 .title {
     color: $bh-black;
     font-size: $font-lg;
@@ -68,6 +76,13 @@ h1, h2, h3, h4, h5, p {
     font-size: 12px;
 }
 
+.bh-input {
+    border-radius: 20px;
+    padding: 10px 20px;
+    // text-transform: uppercase;
+    font-size: 1em;
+    border: none;
+}
 
 
 
