Fixed wave element

--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -6,8 +6,9 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    position: relative;
     // height: 100vh;
-    min-height: 500px;
+    min-height: 600px;
     // max-height: 500px;
     display: flex;
 }
