--- a/src/styles/components/UI/Navbar.scss
+++ b/src/styles/components/UI/Navbar.scss
@@ -24,5 +24,10 @@
     &:hover {
         border-bottom: 2px solid $bh-blue-very-light;
         cursor: pointer;
+    //     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    //    -moz-animation: fadein 2s; /* Firefox < 16 */
+    //     -ms-animation: fadein 2s; /* Internet Explorer */
+    //      -o-animation: fadein 2s; /* Opera < 12.1 */
+    //         animation: fadein 2s;
     }
 }
