--- a/src/styles/components/Home/HomeClients.scss
+++ b/src/styles/components/Home/HomeClients.scss
@@ -1,13 +1,14 @@
 .homeClients {
     text-align: center;
-    padding: 80px 0;
+    // padding: 80px 0;
 }
 
 .homeClients__grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin-top: 80px;
+    margin: 80px 0;
+
     img {
         width: 100%;
     }
@@ -39,4 +40,11 @@
     text-align: left;
     color: $bh-grey;
     
+}
+
+.homeClients__wavyDiv {
+    background: white;
+    path {
+        fill: lightgrey;
+    }
 }
