--- a/src/styles/components/UI/Footer.scss
+++ b/src/styles/components/UI/Footer.scss
@@ -24,9 +24,11 @@
             margin-right: 10px;
             color: $bh-grey;
             font-size: 1.4em;
+            transition: color 0.2s;
             &:hover {
                 color: $bh-blue;
                 cursor: pointer;
+                @include colorTransition;
             }
         }
     }
