Added additional pages

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,5 @@
 @import "./components/Home/HomeAbout.scss";
 @import "./components/Home/HomeProjects.scss";
 @import "./components/Home/HomeClients.scss";
+
+@import "./components/People/PeopleAbout.scss";
