--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -27,11 +27,15 @@ h1, h2, h3, h4, h5, p {
 a {
     color: inherit;
     text-decoration: none;
+    
     &:hover {
-        @include colorTransition;
-        color: $bh-blue;
-        cursor: pointer;
         text-decoration: none;
+
+        @media only screen and (min-width: 992px) {
+            @include colorTransition;
+            color: $bh-blue;
+            cursor: pointer;
+        }
     }
 }
 
