--- a/src/styles/components/Home/HomeAbout.scss
+++ b/src/styles/components/Home/HomeAbout.scss
@@ -1,17 +1,20 @@
 .homeAbout {
     background: lightgrey;
+    position: relative;
+    padding-bottom: 180px;
 }
-
-
 
 .homeAbout__content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     padding: 80px 0;
     img {
-        // @include curvedborder;
         width: 100%;
+    }
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -30,6 +33,10 @@
 
 .homeAbout__wavyDiv {
     background: lightgrey;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
     path {
         fill: white;
     }
