--- a/src/styles/components/Home/HomeClients.scss
+++ b/src/styles/components/Home/HomeClients.scss
@@ -1,38 +1,64 @@
 .homeClients {
     text-align: center;
-    padding-top: 80px;
+
+    hr {
+        padding-bottom: 100px;
+        
+        @media only screen and (min-width: 992px) {
+            padding-bottom: 40px;
+        }
+    }
+
 }
 
 .homeClients__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     margin: 80px 0;
 
     img {
         width: 100%;
     }
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 0;
+    }
 }
 
 .homeClients__grid__client {
     @include boxshadow;
     @include curvedborder;
-    padding: 40px 20px;
+    padding: 20px;
     img {
         width: 100%;
+    }
+
+    @media only screen and (min-width: 992px) {
+        padding: 40px 20px;
+        margin: 80px 0;
     }
 }
 
 .homeClients__grid__client__info {
-    display: flex;
-    // justify-content: space-between;
-    align-items: center;
     img {
         height: 80px;
         width: 80px;
         border-radius: 50%;
-        margin-right: 20px;
+        margin-bottom: 20px;
     }
+
+    @media only screen and (min-width: 992px) {
+        display: flex;
+        align-items: center;
+
+        img {
+            margin-right: 20px;
+            margin-bottom: 0;
+        }
+    }
+    
 }
 
 .homeCLients__grid__client__quote {
