--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -26,7 +26,7 @@
 .homeHero__wavyDiv {
     position: absolute;
     width: 100%;
-    bottom: 0;
+    bottom: -1px;
 }
 
 .homeHero__wavyDiv path {
