--- a/src/styles/components/Home/HomeProjects.scss
+++ b/src/styles/components/Home/HomeProjects.scss
@@ -9,11 +9,19 @@
 
 .homeProjects__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
+    margin: 0 10px;
+
     img {
         width: 100%;
+        max-height: 150px;
         object-fit: cover;
+    }
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 0;
     }
 }
 
