--- a/src/styles/components/Home/HomeServices.scss
+++ b/src/styles/components/Home/HomeServices.scss
@@ -1,26 +1,32 @@
 .homeServices {
-    padding: 80px 0 0 0;
+    padding: 80px 0 180px 0;
     text-align: center;
     position: relative;
 }
 
 .homeServices__panels {
+    box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     padding: 80px 0;
+    margin: 0 10px;
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 0;
+    }
 }
 
 .homeSerivces__panel__img {
-    // height: 200px;
     @include curvedborder;
     width: 100%;
     object-fit: contain;
 }
 
 .homeServices__panel {
-    @include boxshadow;
-    @include curvedborder;
+    // @include boxshadow;
+    // @include curvedborder;
 }
 
 .homeServices__panel__text {
@@ -33,7 +39,13 @@
 
 .homeServices__wavyDiv {
     background: white;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
     path {
         fill: lightgrey;
     }
 }
+
+
