--- a/src/styles/components/UI/Footer.scss
+++ b/src/styles/components/UI/Footer.scss
@@ -1,15 +1,35 @@
 .footer__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
     padding: 40px 0;
+
+    div {
+        margin-bottom: 20px;
+    }
+
+    .footer__grid__col1 {
+        // grid-row-start: 3;
+    }
+
     h3 {
         margin-bottom: 20px;
     }
+
     li {
         margin-bottom: 10px;
         &:hover {
             color: $bh-blue;
             cursor: pointer;
+        }
+    }
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: left;
+
+        .footer__grid__col1 {
+            grid-row-start: 1;
         }
     }
 }
