--- a/src/styles/components/Home/HomeAbout.scss
+++ b/src/styles/components/Home/HomeAbout.scss
@@ -1,7 +1,11 @@
 .homeAbout {
     background: lightgrey;
     position: relative;
-    padding-bottom: 180px;
+    padding-bottom: 80px;
+
+    @media only screen and (min-width: 992px) {
+        padding-bottom: 180px;
+    }
 }
 
 .homeAbout__content {
@@ -34,7 +38,7 @@
 .homeAbout__wavyDiv {
     background: lightgrey;
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 0;
 
     path {
