--- a/src/styles/components/Home/HomeProjects.scss
+++ b/src/styles/components/Home/HomeProjects.scss
@@ -41,7 +41,7 @@
         @include boxshadow;
         object-fit: cover;
         height: 337px;
-        @include curvedborder;
+        // @include curvedborder;
     }
     
 }
