--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -64,9 +64,15 @@ a {
 
 .btn {
     border-radius: 20px;
-    padding: 10px 20px;
+    padding: 10px 30px;
     text-transform: uppercase;
     font-size: 1em;
+    border: 2px solid transparent;
+
+    &:hover {
+        background: #233364;
+        color: white;
+    }
 }
 
 .btn-shadow {
