--- a/src/styles/components/Home/HomeClients.scss
+++ b/src/styles/components/Home/HomeClients.scss
@@ -1,5 +1,7 @@
 .homeClients {
     text-align: center;
+    padding-bottom: 180px;
+    position: relative;
 
     hr {
         padding-bottom: 100px;
@@ -15,7 +17,6 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 20px;
-    margin: 80px 0;
 
     img {
         width: 100%;
@@ -31,6 +32,7 @@
     @include boxshadow;
     @include curvedborder;
     padding: 20px;
+
     img {
         width: 100%;
     }
@@ -70,6 +72,10 @@
 
 .homeClients__wavyDiv {
     background: white;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+
     path {
         fill: lightgrey;
     }
