Added all pages

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,4 +14,11 @@
 @import "./components/Home/HomeProjects.scss";
 @import "./components/Home/HomeClients.scss";
 
+@import "./components/People/PeopleHero.scss";
 @import "./components/People/PeopleAbout.scss";
+
+@import "./components/Projects/ProjectsHero.scss";
+@import "./components/Projects/ProjectsAbout.scss";
+
+@import "./components/Services/ServicesAbout.scss";
+@import "./components/Services/ServicesHero.scss";
