--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -64,7 +64,7 @@ a {
 
 .btn {
     border-radius: 20px;
-    padding: 10px 30px;
+    padding: 10px 20px;
     text-transform: uppercase;
     font-size: 1em;
     border: 2px solid transparent;
@@ -72,6 +72,10 @@ a {
     &:hover {
         background: #233364;
         color: white;
+    }
+
+    @media only screen and (min-width: 992px) {
+        padding: 10px 30px;
     }
 }
 
