--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -16,6 +16,11 @@
     h1 {
         @include textshadow;
         color: white;
+        line-height: 50px;
+
+        @media only screen and (min-width: 992px) {
+            line-height: auto;
+        }
     }
     h2 {
         color: white;
