--- a/src/styles/components/People/PeopleAbout.scss
+++ b/src/styles/components/People/PeopleAbout.scss
@@ -31,7 +31,23 @@
     }
 
     .peopleAbout__grid__person__quote {
-        padding: 20px 20px 40px 20px;
+        padding: 20px;
+    }
+
+    .peopleAbout__grid__person__social {
+        padding-bottom: 20px;
+
+        svg, i {
+            margin: 0 5px;
+            color: $bh-grey;
+            font-size: 1.4em;
+            transition: color 0.2s;
+            &:hover {
+                color: $bh-blue;
+                cursor: pointer;
+                @include colorTransition;
+            }
+        }
     }
 }
 
