--- a/src/styles/components/UI/ContactBox.scss
+++ b/src/styles/components/UI/ContactBox.scss
@@ -7,13 +7,17 @@
 
 .contactBox__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     padding: 40px 0 80px 0;
     div {
         input, select, button {
             width: 90%;
             margin: 10px auto;
         }
+    }
+
+    @media only screen and (min-width: 992px) {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
