--- a/src/styles/components/Home/HomeAbout.scss
+++ b/src/styles/components/Home/HomeAbout.scss
@@ -12,7 +12,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 20px;
-    padding: 80px 0;
+    padding: 40px 0 60px 0;
     img {
         width: 100%;
     }
