--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -9,6 +9,10 @@
     position: relative;
     min-height: 600px;
     display: flex;
+
+    @media only screen and (min-width: 1400px) {
+        min-height: 800px;
+    }
 }
 
 .homeHero__text {
@@ -25,6 +29,9 @@
     h2 {
         color: white;
         margin-bottom: 20px;
+    }
+    button {
+        z-index: 100;
     }
 }
 
