--- a/src/styles/components/UI/Footer.scss
+++ b/src/styles/components/UI/Footer.scss
@@ -18,14 +18,15 @@
 
     li {
         margin-bottom: 10px;
-        &:hover {
-            color: $bh-blue;
-            cursor: pointer;
-        }
+    }
+
+    .navbar__logo {
+        margin-left: 20px;
+        max-width: 90px;
     }
 
     @media only screen and (min-width: 992px) {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         text-align: left;
 
         .footer__grid__col1 {
