--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "./components/Home/HomeAbout.scss";
 @import "./components/Home/HomeProjects.scss";
 @import "./components/Home/HomeClients.scss";
+@import "./components/Home/HomeBlog.scss";
 
 @import "./components/People/PeopleHero.scss";
 @import "./components/People/PeopleAbout.scss";
