Added selected button

--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -94,6 +94,11 @@ a {
     font-size: 12px;
 }
 
+.btn--active {
+    background: #233364;
+    color: white;
+}
+
 .bh-input {
     border-radius: 20px;
     padding: 10px 20px;
