--- a/src/styles/components/UI/ContactBox.scss
+++ b/src/styles/components/UI/ContactBox.scss
@@ -20,7 +20,7 @@
         @include curvedborder;
         border: none;
         resize: none;
-        padding: 10px;
+        padding: 10px 20px;
         width: 90%;
         margin: 10px auto;
     }
