--- a/src/styles/components/People/PeopleHero.scss
+++ b/src/styles/components/People/PeopleHero.scss
@@ -9,6 +9,10 @@
     position: relative;
     min-height: 250px;
     max-height: 400px;
+
+    @media only screen and (min-width: 1400px) {
+        min-height: 380px
+    }
 }
 
 .peopleHero__wavyDiv {
