--- a/src/styles/components/Projects/ProjectsAbout.scss
+++ b/src/styles/components/Projects/ProjectsAbout.scss
@@ -37,10 +37,18 @@
         @media only screen and (min-width: 992px) {
             padding: 180px 0;
         }
+
+        @media only screen and (min-width: 1400px) {
+            padding: 240px 0;
+        }
     }
 
     @media only screen and (min-width: 992px) {
         min-height: 400px
+    }
+
+    @media only screen and (min-width: 1400px) {
+        min-height: 500px
     }
 }
 
