--- a/src/styles/components/Projects/ProjectsAbout.scss
+++ b/src/styles/components/Projects/ProjectsAbout.scss
@@ -52,16 +52,16 @@
     }
 }
 
-#lakegroup--hero {
-    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/lake.jpg') no-repeat center center fixed !important;
+#lockiegroup--hero {
+    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/warehouse.jpg') no-repeat center center fixed !important;
 }
 
-#bridgeinvestor--hero {
-    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/bridge.jpg') no-repeat center center fixed !important;
+#jw--hero {
+    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/projects/jw.jpg') no-repeat center center fixed !important;
 }
 
-#autoteam--hero {
-    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/car.jpg') no-repeat center center fixed;
+#hh--hero {
+    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/projects/hh-wave.jpg') no-repeat center center fixed;
 }
 
 #islandescape--hero {
