--- a/src/styles/components/Services/ServicesHero.scss
+++ b/src/styles/components/Services/ServicesHero.scss
@@ -1,7 +1,7 @@
 .servicesHero {
     text-align: center;
     background: rgb(151,168,214);
-    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/red.jpg') no-repeat center center fixed; 
+    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/services.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
