--- a/src/styles/components/Home/HomeClients.scss
+++ b/src/styles/components/Home/HomeClients.scss
@@ -1,6 +1,7 @@
 .homeClients {
     text-align: center;
     position: relative;
+    padding-bottom: 140px;
 
     hr {
         padding-bottom: 100px;
@@ -32,6 +33,7 @@
     @include curvedborder;
     padding: 20px;
     margin-top: 40px;
+    
 
     img {
         width: 100%;
@@ -40,6 +42,7 @@
     @media only screen and (min-width: 992px) {
         padding: 40px 20px;
         margin: 80px 0;
+        min-height: 340px;
     }
 }
 
