--- a/src/styles/components/Home/HomeProjects.scss
+++ b/src/styles/components/Home/HomeProjects.scss
@@ -15,7 +15,8 @@
 
     img {
         width: 100%;
-        max-height: 150px;
+        max-height: 220px;
+        max-width: 270px;
         object-fit: cover;
     }
 
