--- a/src/styles/components/Services/ServicesAbout.scss
+++ b/src/styles/components/Services/ServicesAbout.scss
@@ -1,5 +1,5 @@
 .servicesAbout {
-    text-align: left;
+    text-align: center;
     padding: 80px 0 0 0;
     position: relative;
 
@@ -13,7 +13,7 @@
     padding-bottom: 20px;
 
     ul {
-        width: 50%;
+        width: 100%;
         text-align: left;
         list-style-type: circle;
         margin: 0 auto;
