--- a/src/styles/components/Services/ServicesAbout.scss
+++ b/src/styles/components/Services/ServicesAbout.scss
@@ -13,8 +13,8 @@
     padding-bottom: 20px;
 
     ul {
-        width: 100%;
-        text-align: left;
+        width: 50%;
+        text-align: center;
         list-style-type: circle;
         margin: 0 auto;
     }
