--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -1,7 +1,7 @@
 .homeHero {
     text-align: center;
     background: rgb(151,168,214);
-    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.4), rgba(225, 225, 225, 0.4)), url('../../static/assets/multicolour.jpg') no-repeat center center fixed; 
+    background: linear-gradient(to bottom right, rgba(55, 55, 55, 0.6), rgba(138, 138, 138, 0.8)), url('../../static/assets/multicolour.jpg') no-repeat 50% fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,6 +17,7 @@
 
 .homeHero__text {
     margin: auto auto;
+
     h1 {
         @include textshadow;
         color: white;
@@ -26,6 +27,7 @@
             line-height: auto;
         }
     }
+
     h2 {
         color: white;
         margin-bottom: 20px;
