--- a/src/styles/components/Home/HomeHero.scss
+++ b/src/styles/components/Home/HomeHero.scss
@@ -10,14 +10,13 @@
     min-height: 600px;
     height: 100%;
     width: 100%;
-    z-index: -10;
+    // z-index: -10;
     display: flex;
 
     @media only screen and (min-width: 1400px) {
-        min-height: 850px;
+        min-height: 800px;
     }
 }
-
 
 .homeHero__text {
     margin: auto auto;
@@ -36,6 +35,7 @@
         color: white;
         margin-bottom: 20px;
     }
+    
     button {
         z-index: 100;
     }
